--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   flutter:
     sdk: flutter
+  flutter_slidable: ^3.1.1
   http: ^1.2.2
   provider: ^6.1.2
 
