--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_slidable: ^3.1.1
   http: ^1.2.2
   provider: ^6.1.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_lints: ^4.0.0
