--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -29,16 +29,18 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
+  flutter_dotenv: ^5.0.2
   flutter:
     sdk: flutter
   flutter_expandable_fab: ^2.3.0
   flutter_slidable: ^3.1.1
   http: ^1.2.2
-  provider: ^6.1.2
-  shared_preferences: ^2.3.3
+  mailer: ^6.2.0
+  path: ^1.9.0
   pdf: ^3.3.0
   printing: ^5.5.0
-  path: ^1.9.0
+  provider: ^6.1.2
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_lints: ^4.0.0
@@ -58,6 +60,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
   # For details regarding adding assets from package dependencies, see
