--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -41,12 +41,17 @@ dependencies:
   printing: ^5.5.0
   provider: ^6.1.2
   shared_preferences: ^2.3.3
+  flutter_launcher_icons: ^0.14.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
