--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -29,20 +29,21 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.8
-  flutter_dotenv: ^5.0.2
+  fl_chart: ^0.69.2
   flutter:
     sdk: flutter
+  flutter_dotenv: ^5.0.2
   flutter_expandable_fab: ^2.3.0
+  flutter_launcher_icons: ^0.14.1
   flutter_slidable: ^3.1.1
   http: ^1.2.2
   mailer: ^6.2.0
+  open_file: ^3.2.1
   path: ^1.9.0
   pdf: ^3.3.0
   printing: ^5.5.0
   provider: ^6.1.2
   shared_preferences: ^2.3.3
-  flutter_launcher_icons: ^0.14.1
-  open_file: ^3.2.1
 
 dev_dependencies:
   flutter_lints: ^4.0.0
