--- a/eventify/pubspec.yaml
+++ b/eventify/pubspec.yaml
@@ -35,8 +35,10 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_expandable_fab: ^2.3.0
   flutter_launcher_icons: ^0.14.1
+  flutter_map: ^7.0.2
   flutter_slidable: ^3.1.1
   http: ^1.2.2
+  location: ^7.0.1
   mailer: ^6.2.0
   open_file: ^3.2.1
   path: ^1.9.0
